--- a/views/show.ejs
+++ b/views/show.ejs
@@ -12,11 +12,12 @@
     </nav>
         <img src="<%=player.img%>"/>
         <h1><%=player.name%></h1>
-        <p>Review: <%=player.review%></p>
         <p>Country: <%=player.country%></p>
         <p>Team: <%=player.team%></p>
         <p>Position: <%=player.position%></p>
+        <p>Retired: <%=player.retired%></p>
         <p>Rating: <%=player.rating%></p>
+        <p>Review: <%=player.review%></p>
         <p>Author: <%=player.author%></p>
 </body>
 </html>
