--- a/views/new.ejs
+++ b/views/new.ejs
@@ -14,6 +14,7 @@
             Country: <input type="text" name="country" placeholder="Country" /><br />
             Team: <input type="text" name="team" placeholder="Team" /><br />
             Position: <input type="text" name="position" placeholder="Position" /><br />
+			Retired: <input type="checkbox" name="retired"/> <br/>
             Rating: <input type="text" name="rating" placeholder="Rating" /><br />
 			Review: <textarea name="review" placeholder="Tell us about this player!"></textarea>
             Author: <input type="text" name="author" placeholder="Your Name"><br/>
