--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/style.css" rel="stylesheet" type="text/css">
     <title>FutbolReview4U</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
         <p>Team: <%=player.team%></p>
         <p>Position: <%=player.position%></p>
         <p>Retired: <%=player.retired%></p>
-        <p>Rating: <%=player.rating%></p>
+        <p>Rating (out of 5): <%=player.rating%></p>
         <p>Review: <%=player.review%></p>
         <p>Author: <%=player.author%></p>
 </body>
