--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,7 +8,7 @@
     <title>FutbolReviews4U</title>
 </head>
 <body>
-    <a href="/players">Back to Home</a>
+    <center><a id="backhome" href="/players">Back to Home</a></center>
     <h1>Edit Review</h1>
     <fieldset>
         <form action="/players/<%= player._id; %>?_method=PUT" method="POST">
@@ -17,12 +17,15 @@
             <h4>Country:</h4> <input type="text" name="country" value="<%=player.country%>">
             <h4>Team:</h4> <input type="text" name="team" value="<%=player.team%>">
             <h4>Position:</h4> <input type="text" name="position" value="<%=player.position%>">
-            <h4>Retired:</h4> <input type="checkbox" name="retired" <% if(player.retired === true){ %> checked <% } %> />
+            <h4>Retired:</h4> <input type="text" name="retired" value="<%=player.retired%>">
             <h4>Rating:</h4> <input type="text" name="rating" value="<%=player.rating%>">
-            <h4>Review:</h4> <textarea name="review" value="<%=player.review%>"></textarea>
+            <h4>Review:</h4> <input type="text" name="review" value="<%=player.review%>"></input>
             <h4>Author:</h4> <input type="text" name="author" value="<%=player.author%>">
-            <input type="submit" value="Submit Changes">
+            <input id="editbutton" type="submit" value="Submit Changes">
         </form>
     </fieldset>
+    <footer>
+        <center><p class="footer"><strong>⚽️ FutbolReviews4U ⚽️</strong></p></center>
+    </footer>
 </body>
 </html>
