--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
             <header>
                 <h1><img id="soccerballgif" src="https://i.imgur.com/PbhsyVs.gif">FutbolReviews4U<img id="soccerballgif" src="https://i.imgur.com/PbhsyVs.gif"></h1>
             </header>
+
 			<nav>
 				<ul>
 					<li><a href="https://www.premierleague.com/"target="_blank">Premier League</a></li>|
@@ -21,21 +22,31 @@
 					<li><a href="https://www.bundesliga.com/en/bundesliga"target="_blank">Bundesliga</a></li>
 				</ul>
 			</nav>
-			<img src="https://media.giphy.com/media/12Vujj7Zh7dTPy/giphy.gif"/>
+
+			<center><img src="https://media.giphy.com/media/12Vujj7Zh7dTPy/giphy.gif"/> </center>
+			<br/>
+
+			<nav>
+			<a href="/players/new" id="createReview">Create Review</a>
+			</nav>
+			<br/>
+			
             <div class="page-container">
-				<a href="/players/new" id="createReview">Create Review</a>
 			<% players.forEach(player => { %>
-				<h2><%=player.name%></h2>
+				<div><h2><%=player.name%></h2>
 				<a href="/players/<%=player._id; %>"><img id="playerImage" src="<%=player.img; %>"></a> <br/>
 				<a id="edit" href="/players/<%= player._id %>/edit">Edit this Review</a>
 				<form action="/players/<%=player.id; %>?_method=DELETE" method="POST">
 					<input type="submit" value="DELETE" />
 				</form>
+				</div>
 			<% }) %>
             </div>
+
 		<footer>
 			<center><p class="footer"><strong>⚽️ FutbolReviews4U ⚽️</strong></p></center>
 		</footer>
+
 		</div>
 	</body>
 </html>
