stars on rating

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -45,11 +45,11 @@
 
 						<label for="rating">RATING</label>
 						<select name="rating" id="rating">
-							<option value="1">⭐️</option>
-							<option value="2">⭐️⭐️</option>
-							<option value="3">⭐️⭐️⭐️</option>
-							<option value="4">⭐️⭐️⭐️⭐️</option>
-							<option value="5">⭐️⭐️⭐️⭐️⭐️</option>
+							<option value="⭐️">⭐️</option>
+							<option value="⭐️⭐️">⭐️⭐️</option>
+							<option value="⭐️⭐️⭐️">⭐️⭐️⭐️</option>
+							<option value="⭐️⭐️⭐️⭐️">⭐️⭐️⭐️⭐️</option>
+							<option value="⭐️⭐️⭐️⭐️⭐️">⭐️⭐️⭐️⭐️⭐️</option>
 						</select>
 
 						<label for="review">REVIEW</label>
@@ -66,3 +66,5 @@
 		</footer>
 	</body>
 </html>
+
+
