--- a/views/show.ejs
+++ b/views/show.ejs
@@ -18,7 +18,7 @@
         <p>Team: <%=player.team%></p>
         <p>Position: <%=player.position%></p>
         <p>Retired: <%=player.retired%></p>
-        <p>Rating (out of 5): <%=player.rating%></p>
+        <p>Rating: <%=player.rating%></p>
         <p>Review: <%=player.review%></p>
         <p>Author: <%=player.author%></p>
     </div>
