position and readme update

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -19,8 +19,10 @@
             <h4>Position:</h4> <input type="text" name="position" value="<%=player.position%>">
             <h4>Retired:</h4> <input type="text" name="retired" value="<%=player.retired%>">
             <h4>Rating:</h4> <input type="text" name="rating" value="<%=player.rating%>">
-            <h4>Review:</h4> <input type="text" name="review" value="<%=player.review%>"></input>
+            <h4>Review:</h4> <input type="text" name="review" value="<%=player.review%>">
             <h4>Author:</h4> <input type="text" name="author" value="<%=player.author%>">
+            <br/>
+            <br/>
             <input id="editbutton" type="submit" value="Submit Changes">
         </form>
     </fieldset>
