--- a/views/new.ejs
+++ b/views/new.ejs
@@ -32,9 +32,9 @@
 						<label for="position">POSITION</label>
 						<select name="position" id="position">
 							<option value="GK">Goalkeeper</option>
-							<option value="D">Defense</option>
-							<option value="M">Midfielder</option>
-							<option value="F">Forward</option>
+							<option value="DEF">Defense</option>
+							<option value="MID">Midfielder</option>
+							<option value="FWD">Forward</option>
 						</select>
 
 						<label for="retired">RETIRED</label>
@@ -53,7 +53,7 @@
 						</select>
 
 						<label for="review">REVIEW</label>
-						<input type="text" name="review" id="review" placeholder="Tell us about this player!"></input>
+						<input type="text" name="review" id="review" placeholder="Tell us about this player!">
 
 						<label for="author">AUTHOR</label>
 						<input type="text" name="author" id="author" placeholder="Team">
