--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
             </div>
 
 		<footer>
-			<center><p class="footer"><strong>⚽️ FutbolReviews4U ⚽️</strong></p></center>
+			<center><p><strong>⚽️ FutbolReviews4U ⚽️</strong></p></center>
 		</footer>
 
 		</div>
