--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/stylec.css" type="text/css">
 		<link href="/style.css" rel="stylesheet" type="text/css">
 		<title>FutbolReviews4U</title>
 	</head>
@@ -62,7 +61,7 @@
 			</form>
 		</div>
 		<footer>
-			<center><p class="footer"><strong>⚽️ FutbolReviews4U ⚽️</strong></p></center>
+			<p class="footer"><strong>⚽️ FutbolReviews4U ⚽️</strong></p>
 		</footer>
 	</body>
 </html>
