--- a/public/style.css
+++ b/public/style.css
@@ -6,15 +6,13 @@
 * {
     cursor: url("https://i.imgur.com/lBJM4e1.png"), auto;
     background-color: #8ee4af;;
-    
+    box-sizing: border-box;
 }
-
 
 /* INDEX */
 #soccerballgif {
     width: 100px;
     height: auto;
-    box-sizing: border-box;
 }
 
 header {
@@ -101,14 +99,59 @@ nav li a:hover {
     background-color: #edf5e1 ;
 }
 
-/* SHOW */
-#show-main {
-    text-align: center;
-    padding-top: 20px;
-}
+
 
 /* CREATE */
 /* check other css file */
+.container-new {
+    width: 50vw;
+    height: 58vw;
+    margin: 50px auto;
+    display: flex;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px #ddd,
+                -1px -1px 10px #ddd,
+                1px -1px 10px #ddd,
+                -1px 1px 10px #ddd;
+    justify-content: center;
+    overflow-y: scroll;
+  }
+
+  fieldset {
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 20px 0;
+    text-align: center;
+  }
+
+  legend {
+    padding: 0px 10px;
+    font-family: sans-serif;
+    font-weight: 500;
+    color: #05386b;
+  }
+  label {
+    font-family: sans-serif;
+    font-weight: 200;
+    color: grey;
+    display: block;
+    padding-top: 10px;
+  }
+  
+  input {
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid;
+    border-radius: 5px;
+  }
+
+#addreview:hover {
+    background-color: #05386b;
+    color:grey;
+}
 
 /* EDIT */
   #editbutton {
@@ -117,6 +160,28 @@ nav li a:hover {
     color: black;
 }
 
+
+
 #editbutton:hover {
     background-color: #05386b;
+}
+
+/* SHOW */
+#show-main {
+    /* text-align: center; */
+    margin-top: 20px;
+}
+
+#showbody {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center
+}
+
+.footer {
+    display: flex;
+    align-content: flex-end;
+    justify-content: center;
+    position: relative;
 }
