--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,11 +9,11 @@
 	</head>
 	<body>
 		<nav>
-			<a id="backhome" href="/players">Back to Home</a>
+			<a id="backhome" href="/">Back to Home</a>
 		</nav>
 		<center><h1>Create a New Review</h1></center>
 		<div class="container-new">
-			<form action="/players" method="POST">
+			<form action="/" method="POST">
 				<fieldset>
 					<legend>PLAYER INFO</legend>
 						<label for="img">IMAGE</label>
