--- a/views/show.ejs
+++ b/views/show.ejs
@@ -9,7 +9,7 @@
 </head>
 <body id="showbody">
     <nav>
-        <a id="backhome" href="/players">Back to Home</a>
+        <a id="backhome" href="/">Back to Home</a>
     </nav>
 
     <div id="show-main">
