--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,16 +27,16 @@
 			<br/>
 
 			<nav>
-			<a href="/players/new" id="createReview">Create Review</a>
+			<a href="/new" id="createReview">Create Review</a>
 			</nav>
 			<br/>
 			
             <div class="page-container">
 			<% players.forEach(player => { %>
 				<div><h2><%=player.name%></h2>
-				<a href="/players/<%=player._id; %>"><img id="playerImage" src="<%=player.img; %>"></a> <br/>
-				<a id="edit" href="/players/<%= player._id %>/edit">Edit this Review</a>
-				<form action="/players/<%=player.id; %>?_method=DELETE" method="POST">
+				<a href="/<%=player._id; %>"><img id="playerImage" src="<%=player.img; %>"></a> <br/>
+				<a id="edit" href="/<%= player._id %>/edit">Edit this Review</a>
+				<form action="/<%=player.id; %>?_method=DELETE" method="POST">
 					<input type="submit" value="DELETE" />
 				</form>
 				</div>
